# rust_win32_sample

./: Cargo.toml  Readme.md  build.rs
res/: ps.hlsl  vs.hlsl
src/: debug.rs  macros.rs  main.rs  win32.rs  window.rs
src/com/: device_and_swap_chain.rs  mod.rs
src/com/d3d/: blob.rs  compile.rs  mod.rs  target.rs
src/com/d3d11/: device.rs  device_context.rs  driver_type.rs  feature_level.rs  input_element_desc.rs  mod.rs  primitive_topology.rs
src/com/dxgi/: mod.rs  swap_chain.rs
src/d3d11/: device.rs  device_context.rs  driver_type.rs  feature_level.rs  input_element_desc.rs  mod.rs  primitive_topology.rs  swap_chain.rs
