[package]
name = "rust_win32_d3d11"
version = "0.1.0"
authors = ["MaulingMonkey <git@maulingmonkey.com>"]
edition = "2018"

[target.'cfg(windows)'.build-dependencies]
mmrbi   = "0.0.15"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3.7"
features = [
    "d3d11",
    "debugapi",
    "dxgi",
    "libloaderapi",
    "winerror",
    "winuser",
]
